--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,13 @@
     "manifest_version" : 2,
     "name" : "SAUCER",
     "version" : "1.0",
+    "description" : "SAUCER for nhentai",
+
+    "icons" : {
+        "128" : "icon128.png",
+        "48" : "icon48.png",
+        "16" : "icon16.png"
+    },
 
     "content_scripts" : [
         {
@@ -9,13 +16,15 @@
                 "<all_urls>"
             ],
             "js" : [
-                "jquery.js"
+                "jquery.js",
+                "popup.js"
             ]
         }
     ],
 
     "browser_action" : {
-        "default_icon" : "icon.png"
+        "default_icon" : "icon.png",
+        "default_popup" : "popup.html"
     },
 
     "background" : {
@@ -24,6 +33,7 @@
 
     "permissions" : [
         "contextMenus",
-        "tabs"
+        "tabs",
+        "storage"
     ]
 }
